Shop Controller Tests